cabal-version: 2.2

name:           gestational-calendar
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cohei/gestational-calendar#readme>
homepage:       https://github.com/cohei/gestational-calendar#readme
bug-reports:    https://github.com/cohei/gestational-calendar/issues
author:         TANIGUCHI Kohei
maintainer:     a.d.xvii.kal.mai@gmail.com
copyright:      2018 TANIGUCHI Kohei
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cohei/gestational-calendar

common dependency
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , http-media
    , text
    , time >= 1.9
    , servant-server
    , wai
    , warp

flag static
  description: Build static binary
  manual: True
  default: False

library
  import: dependency
  exposed-modules:
      Event
      ICalendar
      Server
  hs-source-dirs:
      src
  default-language: Haskell2010

executable gestational-calendar
  import: dependency
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
    gestational-calendar
  -- https://www.reddit.com/r/haskell/comments/6xuiy7/building_static_binaries_program_a_convoluted/dmjqode/
  if flag(static)
    ld-options: -static
  default-language: Haskell2010

test-suite gestational-calendar-test
  import: dependency
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    gestational-calendar
  default-language: Haskell2010
