cabal-version: 3.8
name: gestational-calendar
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/cohei/gestational-calendar#readme>
homepage: https://github.com/cohei/gestational-calendar#readme
bug-reports: https://github.com/cohei/gestational-calendar/issues
author: TANIGUCHI Kohei
maintainer: a.d.xvii.kal.mai@gmail.com
copyright: 2018 TANIGUCHI Kohei
license: BSD-3-Clause
license-file: LICENSE
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/cohei/gestational-calendar

common dependency
  build-depends:
    base >=4.7 && <5,
    bytestring,
    http-media,
    servant-server,
    text,
    time >=1.9,
    wai,
    warp,

library
  import: dependency
  hs-source-dirs: src
  exposed-modules:
    Event
    ICalendar
    Server
  default-language: GHC2024

executable gestational-calendar
  import: dependency
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: gestational-calendar
  ghc-options: -threaded

test-suite gestational-calendar-test
  import: dependency
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: gestational-calendar
